# qlang

./: Cargo.toml  README.md  example.q  setup_bench.js  spec.md
.github/workflows/: add-assets.yml  bench.yml  build-q.yml  clippy.yml  fmt.yml
benches/: parser.rs
doc/: how-it-works.md  spec.md
src/: args.rs  ast.rs  colors.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/error/: codes.rs  errors.rs  mod.rs
src/errors/: mod.rs  templates.rs
src/lexer/: core.rs  mod.rs
src/llvm/: codegen.rs
src/parser/: ast.rs  error.rs  mod.rs
src/parser/ast/: ast.rs  lexer.rs  parser.rs
src/repl/: mod.rs
src/tokens/: mod.rs
