[package]
name = "qlang"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "*"
ansi_term = "*"
inkwell = { git = "https://github.com/TheDan64/inkwell.git", branch = "master", features = ["llvm13-0"] }
